kubernetes/synapse-admin/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: synapse-admin-lan-only
  namespace: tuwunel
spec:
  ipAllowList:
    sourceRange:
      - "192.168.4.0/24"
      - "10.0.0.0/8"

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synapse-admin
  namespace: tuwunel
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`synapse.aonishchenko.ru`)
      kind: Rule
      middlewares:
        - name: synapse-admin-lan-only
      services:
        - name: synapse-admin
          port: 80
  tls:
    secretName: synapse-admin-tls
